[package]
name = "thesis-tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "thesis_tool_lib"
path = "src/lib.rs"

[[bin]]
name = "thesis_tool_cli"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
petgraph = "0.6.0"
graph6 = "2.0.1"
itertools = "0.10.1"
picorust = { git = "https://github.com/lambdaxymox/picorust" }
env_logger = "0.9.0"
log = "0.4.14"

