[package]
name = "thesis_tool_cli"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "thesis_tool_cli_lib"
path = "src/lib.rs"

[[bin]]
name = "thesis_tool_cli"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cli_benchmark"
harness = false

[dependencies]
clap = "2.33.3"
itertools = "0.10.1"
env_logger = "0.9.0"
log = "0.4.14"
indicatif = {version = "0.16.2", features = ["rayon"]}
console = "0.15.0"
indoc = "1.0.3"
thesis_tool_lib = { path = "../thesis-tool-lib" }
postgres = "0.19.2"
postgres-types = { version = "0.2.2", features = ["derive"] }
rayon = "1.5.1"
