[package]
name = "thesis_tool_lib"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "thesis_tool_lib"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lib_benchmark"
harness = false

[dependencies]
petgraph = { version = "0.6.0", features = ["serde-1"] }
graph6 = "2.0.1"
itertools = "0.10.1"
picorust = { git = "https://github.com/lambdaxymox/picorust" }
env_logger = "0.9.0"
log = "0.4.14"
dirs = "4.0.0"
num_cpus = "1.13.0"
rusqlite = { version = "0.26.1", features = ["blob",  "backup"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
